--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Push to ECR
+name: CI/CD - Build and Deploy
 
 on:
   push:
@@ -10,15 +10,15 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 소스 체크아웃
+      # 1. Checkout
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2. JDK 25 설정
+      # 2. JDK 25
       - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
@@ -26,37 +26,52 @@ jobs:
           java-version: '25'
           cache: gradle
 
-      # 3. Gradle 빌드
+      # 3. Build JAR
       - name: Build with Gradle
         run: ./gradlew clean bootJar --no-daemon
 
-      # 4. AWS OIDC 인증
+      # 4. AWS OIDC Login
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 5. ECR 로그인
+      # 5. ECR Login
       - name: Login to ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 6. Docker 이미지 빌드
+      # 6. Build Docker Image
       - name: Build Docker image
         run: |
-          docker build \
-            -t ${{ secrets.ECR_REPOSITORY }}:${{ github.sha }} .
+          docker build -t ${{ secrets.ECR_REPOSITORY }}:${{ github.sha }} .
 
-      # 7. 태깅 (ECR용)
+      # 7. Tag for ECR
       - name: Tag image
         run: |
           docker tag \
-            ${{ secrets.ECR_REPOSITORY }}:${{ github.sha }} \
-            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+          ${{ secrets.ECR_REPOSITORY }}:${{ github.sha }} \
+          ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
 
-      # 8. ECR Push
+      # 8. Push to ECR
       - name: Push image
         run: |
           docker push \
-            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+          ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+
+      # 9. Deploy to EC2 via SSH
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            aws ecr get-login-password --region ap-northeast-2 | \
+            docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
+
+            docker pull ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+
+            cd ~/app
+            IMAGE_TAG=${{ github.sha }} docker compose up -d --remove-orphans
